# MLOps_course_AGH

./: README.md
lab01/: HOMEWORK.md  LAB_INSTRUCTION.md
lab02/: notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb
lab03/: notebook_polars.ipynb
lab07/: LAB_INSTRUCTION.md
lab10/: LAB_INSTRUCTION.md
lab12/: HOMEWORK.md  LAB_INSTRUCTION.md  pyproject.toml
lab13/: LAB_INSTRUCTION.md
lab14/: README.md
