[project]
name = "MLOps_course_AGH_lab_02"
version = "1.0.0"
description = ""
readme = "README.md"

requires-python = "==3.11.*"

dependencies = [
    "apache-airflow[celery,pandas,standard,uv]==3.1.5",
    "cloudpickle",
    "pandas",
    "requests",
    "twelvedata",
]

[dependency-groups]
dev = [
    "ruff"
]
